--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.locale }}">
+<html lang="{{ site.lang }}">
 	<head>
 		<meta charset="{{ site.charset }}">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
