added transparent favicon and HTML improvements

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang }}">
 	<head>
-		<meta charset="{{ site.charset }}">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<meta name="format-detection" content="telephone=no">
+		<meta charset="{{ site.charset }}" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<meta name="format-detection" content="telephone=no" />
 		{% seo %}
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" />
-		<link rel="stylesheet" href="/assets/css/style.css?{{site.time | date: '%s%N'}}">
+		<link rel="stylesheet" href="/assets/css/style.css?{{site.time | date: '%s%N'}}" />
+		<link rel="icon" href="/assets/img/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div class="container py-2">
