--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,6 +14,8 @@
 	<body>
 		<div class="container py-2">
 			{{ content }}
+
+			<i>Page generated at {{ site.time | date: '%Y-%m-%d / %H:%M' }}</i>
 		</div>
 
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/{{ dependency_jquery }}/jquery.min.js"></script>
