--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,3 +5,12 @@
 	max-width: 700px;
 	overflow-x: hidden;
 }
+
+@media print{
+	a[href^="http://"]:after,
+	a[href^="https://"]:after {
+		content:" (" attr(href) ") ";
+		font-size:0.8em;
+		font-weight:normal;
+	}
+}
