--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,5 +20,7 @@
 
 		<script src="https://cdn.jsdelivr.net/npm/jquery@3/dist/jquery.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4/dist/js/bootstrap.bundle.min.js"></script>
+		
+		<img src="https://matomo.janbrodda.de/custom_track.jsp?idsite=1&rec=1" style="border:0;" alt="" />
 	</body>
 </html>
