--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,18 +5,39 @@
 	overflow-x: hidden;
 }
 
+hr {
+	padding-top: 10px;
+	clear: both;
+	display: block;
+}
+
 ul {
+	list-style-type:none;
+	padding:0;
+	margin-left:0;
+}
+
+li {
+	margin-bottom:0.5em;
+}
+
+@mixin inline-list {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
+
+	li {
+		float: left;
+		display: block;
+		text-align: center;
+		padding: 0 20px 5px 0;
+		margin:0;
+	}
 }
 
-li {
-	float: left;
-	display: block;
-	text-align: center;
-	padding: 0 20px 5px 0;
+h2#references--weblinks + ul {
+	@include inline-list;
 }
 
 @media print {
