adjust page breaks while printing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,10 @@ li {
 	margin-bottom:0.5em;
 }
 
+p {
+	page-break-inside: avoid;
+}
+
 @mixin inline-list {
 	list-style-type: none;
 	margin: 0;
