--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,11 +21,11 @@ li {
 	margin-bottom:0.5em;
 }
 
-p {
+p, section {
 	page-break-inside: avoid;
 }
 
-@mixin inline-list {
+h2#references--weblinks + ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
@@ -38,10 +38,6 @@ p {
 		padding: 0 20px 10px 0;
 		margin:0;
 	}
-}
-
-h2#references--weblinks + ul {
-	@include inline-list;
 }
 
 @media print {
